# lf-zephyr-uc-template

./: CMakeLists.txt  prj.conf  rpi_4b.overlay  west.yml
src/: PressureSensor.lf
src/SkiLift/: Lift.lf
src/SkiLift/lib/: EntryGate.lf  EntrySensor.lf  LiftMotion.lf  ObjectDetector.lf  PressureSensor.lf  ScreenPrinter.lf
